--- a/scheduler/scheduler.html
+++ b/scheduler/scheduler.html
@@ -2,7 +2,7 @@
 
     <div class="panel panel-default">
         <div class="panel-heading text-center">
-            <h3>Schedule Blocks</h3>
+            <h3>Current Schedule Blocks</h3>
 
             <div class="schedules-panel-heading-controls">
                 <span class="">Scale</span>
