navbar style changes

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <div style="margin-top: 5px;">
+                <div style="margin-top: 5px; margin-right: 10px;">
                 <a class="navbar-anchor">{{utcTime}} (UTC)</a><br/>
                 <a class="navbar-anchor">{{localTime}} (Local)</a>
                 </div>
             </li>
             <li>
-                <a class="unselectable navbar-anchor" ng-click="stateGo('landing')">Landing Page
+                <a class="unselectable navbar-border-anchor" ng-click="stateGo('landing')">Landing Page
                 </a>
             </li>
 
