--- a/login-form/login-form.html
+++ b/login-form/login-form.html
@@ -16,12 +16,12 @@
         </form>
 
 
-        <div id="gSignInWrapper">
-            <div id="googleButton" class="" ng-click="loginGoogle()">
-                <span class="icon"></span>
-                <span class="buttonText">Sign in with Google</span>
-            </div>
-        </div>
+        <!--<div id="gSignInWrapper">-->
+            <!--<div id="googleButton" class="" ng-click="loginGoogle()">-->
+                <!--<span class="icon"></span>-->
+                <!--<span class="buttonText">Sign in with Google</span>-->
+            <!--</div>-->
+        <!--</div>-->
 
         <div class="panel-footer">
             <a href="" ng-click="forgotPassword()">Forgot your password?</a>
