refactored gantt chart to be a reusable widget

--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,5 +1,6 @@
 <div class="view-container" ng-controller="LandingCtrl">
 
+    <a class="btn-delete-dashboard-pref" ng-click="deleteDashboardLocalStorage()"><span class="glyphicon glyphicon-trash"></span></a>
     <adf-dashboard name="{{name}}" adf-model="dashboardModel"></adf-dashboard>
 
 </div>
