reworked project structure to allow for easier and better unit testing

--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -44,7 +44,7 @@
                on-task-dbl-clicked="taskEvent(event)"
                on-task-context-clicked="taskEvent(event)"
                on-task-updated="taskEvent(event)"
-               template-url="util/gantt/gantt.template.html">
+               template-url="app/util/gantt/gantt.template.html">
         </gantt>
     </div>
 
