--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link href="app.less" type="text/css" rel="stylesheet/less">
+    <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">-->
     <link href="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.css" rel="stylesheet"
           type="text/css">
@@ -58,29 +58,29 @@
 <!-- endbuild -->
 
 <!-- Main App JS -->
-<script src="app.js"></script>
-<script src="about/about.js"></script>
-<script src="login-form/login-form.js"></script>
-<script src="auth/auth-service.js"></script>
-<script src="landing/landing.js"></script>
-<script src="weather/weather.js"></script>
-<script src="operator-control/receptor-state/receptor-state.js"></script>
-<script src="operator-control/operator-control.js"></script>
-<script src="util/focus-directive.js"></script>
-<script src="data/data-service.js"></script>
-<script src="auth/session-service.js"></script>
-<script src="sensor-graph/sensor-graph.js"></script>
-<script src="d3/d3-chart-directive.js"></script>
-<script src="d3/d3-service.js"></script>
-<script src="admin/admin.js"></script>
-<script src="alarms/alarms.js"></script>
-<script src="alarms/alarm-service.js"></script>
-<script src="alarms/alarms-notify.js"></script>
-<script src="widgets/navigation/navigation-widget.js"></script>
-<script src="widgets/dashboard-structures.js"></script>
-<script src="scheduler/scheduler.js"></script>
-<script src="util/gantt/gantt.js"></script>
-<script src="widgets/gantt/gantt-widget.js"></script>
+<script src="app/app.js"></script>
+<script src="app/about/about.js"></script>
+<script src="app/login-form/login-form.js"></script>
+<script src="app/auth/auth-service.js"></script>
+<script src="app/landing/landing.js"></script>
+<script src="app/weather/weather.js"></script>
+<script src="app/operator-control/receptor-state/receptor-state.js"></script>
+<script src="app/operator-control/operator-control.js"></script>
+<script src="app/util/focus-directive.js"></script>
+<script src="app/data/data-service.js"></script>
+<script src="app/auth/session-service.js"></script>
+<script src="app/sensor-graph/sensor-graph.js"></script>
+<script src="app/d3/d3-chart-directive.js"></script>
+<script src="app/d3/d3-service.js"></script>
+<script src="app/admin/admin.js"></script>
+<script src="app/alarms/alarms.js"></script>
+<script src="app/alarms/alarm-service.js"></script>
+<script src="app/alarms/alarms-notify.js"></script>
+<script src="app/widgets/navigation/navigation-widget.js"></script>
+<script src="app/widgets/dashboard-structures.js"></script>
+<script src="app/scheduler/scheduler.js"></script>
+<script src="app/util/gantt/gantt.js"></script>
+<script src="app/widgets/gantt/gantt-widget.js"></script>
 <!-- Add New Component JS Above -->
 
 <!--ng-show="userLoggedIn && !navbarCollapsed"-->
