now using bower installed angular-gantt, implemented more unit testing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.css" rel="stylesheet"
           type="text/css">
     <link href="bower_components/ng-grid/ng-grid.min.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/angular-gantt/assets/gantt.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" rel="stylesheet"
           type="text/css">
 </head>
@@ -48,6 +49,7 @@
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js"></script>
 <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 <!-- build:js js/jquery.ui.sortable.min.js -->
@@ -79,7 +81,6 @@
 <script src="app/widgets/navigation/navigation-widget.js"></script>
 <script src="app/widgets/dashboard-structures.js"></script>
 <script src="app/scheduler/scheduler.js"></script>
-<script src="app/util/gantt/gantt.js"></script>
 <script src="app/widgets/gantt/gantt-widget.js"></script>
 <!-- Add New Component JS Above -->
 
