--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--})();-->
 <!--</script>-->
 
-<body ng-controller="ApplicationController">
+<body ng-controller="ApplicationCtrl">
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
