--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -1,6 +1,6 @@
 <div class="view-container" ng-controller="LandingCtrl">
 
-    <a class="btn-delete-dashboard-pref" ng-click="deleteDashboardLocalStorage()"><span class="glyphicon glyphicon-trash"></span></a>
+    <a class="btn-delete-dashboard-pref" ng-click="deleteDashboardLocalStorage()"><span class="fa fa-trash-o"></span></a>
     <adf-dashboard name="{{name}}" adf-model="dashboardModel"></adf-dashboard>
 
 </div>
