--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -15,7 +15,7 @@
                         <div class="panel panel-default panel-content">
                             <div class="panel-heading">
                                 <div class="draft-controls">
-                                    <button ng-click="addDraftSchedule()"><span class="glyphicon-plus"></span></button>
+                                    <button ng-click="addDraftSchedule()"><span class="fa fa-plus"></span></button>
                                 </div>
                                 <div class="panel-heading-text-drafts">
                                     Schedule Drafts
@@ -26,14 +26,14 @@
 
                         <div class="no-style-centered">
                             <button ng-class="{disabled: draftSelections.length === 0}" ng-click="moveDraftsToSchedule()">
-                                <span class="glyphicon-chevron-down"></span>
-                                <span class="glyphicon-chevron-down"></span>
+                                <span class="fa fa-chevron-down"></span>
+                                <span class="fa fa-chevron-down"></span>
                             </button>
 
                             <button ng-class="{disabled: scheduleSelections.length === 0}"
                                     ng-click="moveSchedulesToDraft()">
-                                <span class="glyphicon-chevron-up"></span>
-                                <span class="glyphicon-chevron-up"></span>
+                                <span class="fa fa-chevron-up"></span>
+                                <span class="fa fa-chevron-up"></span>
                             </button>
                         </div>
 
