initial commit for d3 treemap and health and status partials

--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -2,7 +2,7 @@
 
     <button class="btn btn-primary" ng-click="stateGo('operatorControl')">Operator Control</button>
     <button class="btn btn-primary" ng-click="stateGo('alarms')">Alarms</button>
-    <button class="btn btn-primary" disabled>Health and State</button>
+    <button class="btn btn-primary" ng-click="stateGo('health')">Health and State</button>
 
 
     <button class="btn btn-primary" ng-click="stateGo('scheduler')">Scheduler</button>
