--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
 <!-- Add New Bower Component JS Above -->
 
 <!-- build:js js/jquery.ui.sortable.min.js -->
-<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery.ui.core.js"></script>
-<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery.ui.widget.js"></script>
-<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery.ui.mouse.js"></script>
-<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery.ui.sortable.js"></script>
+<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
 <!-- endbuild -->
 
 <!-- Main App JS -->
@@ -74,9 +71,11 @@
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/util/focus-directive.js"></script>
 <script src="app/data/data-service.js"></script>
+<script src="app/health/health.js"></script>
 <script src="app/auth/session-service.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/d3/d3-chart-directive.js"></script>
+<script src="app/d3/d3-treemap.js"></script>
 <script src="app/d3/d3-service.js"></script>
 <script src="app/admin/admin.js"></script>
 <script src="app/alarms/alarms.js"></script>
