zoomable treemap view for health and state view

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <li><a href="" ng-click="stateGo('landing')">Landing</a></li>
                 <li class="divider"></li>
                 <li><a href="" ng-click="stateGo('alarms')">Alarms</a></li>
-                <li><a href="">Health And State</a></li>
+                <li><a href="" ng-click="stateGo('health')">Health And State</a></li>
                 <li><a href="" ng-click="stateGo('operatorControl')">Operator Control</a></li>
                 <li><a href="" ng-click="stateGo('scheduler')">Scheduler</a></li>
                 <li class="divider"></li>
