--- a/app/health/health.html
+++ b/app/health/health.html
@@ -1,9 +1,5 @@
 <div class="view-container" ng-controller="HealthCtrl">
 
-    <form>
-        <label><input type="radio" name="mode" value="size" checked> Size</label>
-        <label><input type="radio" name="mode" value="count"> Count</label>
-    </form>
-    <d3-treemap data="d3Data"></d3-treemap>
+    <d3-treemap data="d3TreemapData" display-value="treemapDisplayValue" chart-width="treeWidth" chart-height="treeHeight"></d3-treemap>
 
 </div>
