handling resize and redraw for health treemap

--- a/app/health/health.html
+++ b/app/health/health.html
@@ -1,5 +1,5 @@
-<div class="view-container" ng-controller="HealthCtrl">
+<div class="view-container-full" ng-controller="HealthCtrl">
 
-    <d3-treemap data="d3TreemapData" display-value="treemapDisplayValue" chart-width="treeWidth" chart-height="treeHeight"></d3-treemap>
+    <d3-treemap data="d3TreemapData" chart-size="treeChartSize"></d3-treemap>
 
 </div>
